--- a/production/dwarf/stylesheets/application.css
+++ b/production/dwarf/stylesheets/application.css
@@ -701,9 +701,9 @@ body.controller-welcome.action-index #wrapper3 #main {
   font-size: 10px;
   position: relative;
   padding: 0;
-  height: 32px;
-  padding-top: 0 ul;
-    padding-top-padding: 0 21px; }
+  height: 32px; }
+  #top-menu ul {
+    padding: 0 20px; }
   #top-menu li,
   #top-menu #loggedas {
     color: #ddd;
@@ -782,7 +782,8 @@ body.controller-welcome.action-index #wrapper3 #main {
   font-size: 9px;
   margin: 20px 0 4px 0;
   text-align: left;
-  padding: 0; }
+  padding: 0;
+  float: none; }
   #footer a:hover {
     background: #666 none repeat scroll 0 0;
     color: #FFF !important; }
@@ -2308,9 +2309,11 @@ body #content .nodata {
     background-color: #f5f5f5;
     padding: 0; }
 
-  #footer .bgl, #footer .bgr {
-    background-color: #f5f5f5;
-    color: #5c5c5c; }
+  #footer {
+    float: right; }
+    #footer .bgl, #footer .bgr {
+      background-color: #f5f5f5;
+      color: #5c5c5c; }
 
   body[class^="controller-"] #header h1,
   body[class*="controller-"] #header h1 {
