--- a/workspace/scss/_alerts.scss
+++ b/workspace/scss/_alerts.scss
@@ -9,7 +9,7 @@
 
 p.nodata, body .nodata, body #content .nodata, .warning, div.flash, .warning, .conflict {
 	border-width: 0;
-	margin: 0;
+	margin: 0 0 10px;
 	@include box-sizing(border-box);
 }
 
