--- a/workspace/scss/_settings.scss
+++ b/workspace/scss/_settings.scss
@@ -17,3 +17,8 @@ $typeset-secondary: "Source Code Pro", Helvetica,Arial,"Lucida Grande",verdana,s
  * Margins
  */
 $span-margin: 1.2rem;
+
+/**
+ * Columns
+ */
+$columns-project: 2;
