--- a/production/dwarf/stylesheets/application.css
+++ b/production/dwarf/stylesheets/application.css
@@ -23,6 +23,9 @@
  * Margins
  */
 /**
+ * Columns
+ */
+/**
  * Dwarf: Colours
  *
  * Author: Jared Denison (@jaroslavius)
@@ -1056,7 +1059,7 @@ input[type="submit"], button, a[accesskey="r"], #attach_files_link {
   float: none;
   margin: 0;
   border: none;
-  margin-bottom: 10px;
+  margin-bottom: 1.2rem;
   padding: 1.2rem;
   clear: both; }
 
@@ -1086,7 +1089,7 @@ input[type="submit"], button, a[accesskey="r"], #attach_files_link {
   float: none;
   text-transform: uppercase;
   border: none;
-  margin: 0 0 10px !important;
+  margin: 0 0 1.2rem;
   background: #fff;
   padding: 1.2rem 1.2rem 1rem !important; }
 
@@ -1107,7 +1110,7 @@ select[multiple="multiple"] {
  * Tabs
  */
 #content .tabs {
-  margin-bottom: 1.2em;
+  margin-bottom: 1.2rem;
   position: relative;
   background: #fff;
   overflow: visible;
@@ -1154,53 +1157,52 @@ select[multiple="multiple"] {
 .controller-issues input#issue_subject {
   height: 48px; }
 
-.controller-issues .issue {
+.controller-issues .issue .issue-wrapper {
   position: relative;
   background-color: transparent;
-  padding: 0;
-  background: #FFFFEC; }
-  .controller-issues .issue table img.gravatar {
+  padding: 0; }
+  .controller-issues .issue .issue-wrapper table img.gravatar {
     margin-top: 2px;
     width: auto;
     height: auto;
     min-height: 14px;
     min-width: 14px; }
-  .controller-issues .issue img.gravatar {
+  .controller-issues .issue .issue-wrapper img.gravatar {
     margin: 0 10px 15px 0;
     border-radius: 100%; }
-  .controller-issues .issue .subject h3 {
+  .controller-issues .issue .issue-wrapper .subject h3 {
     padding-top: 0;
     padding-bottom: 0px;
     font-size: 24px; }
-  .controller-issues .issue .issue-wrapper {
+  .controller-issues .issue .issue-wrapper .issue-wrapper {
     background-color: #faf8f5;
     position: static; }
-    .controller-issues .issue .issue-wrapper > hr {
+    .controller-issues .issue .issue-wrapper .issue-wrapper > hr {
       background: #f5f5f5 none repeat scroll 0 0;
       margin-top: 10px;
       margin-bottom: 20px; }
-  .controller-issues .issue div.wiki h3 {
+  .controller-issues .issue .issue-wrapper div.wiki h3 {
     text-decoration: underline; }
-  .controller-issues .issue div.wiki a:link {
+  .controller-issues .issue .issue-wrapper div.wiki a:link {
     text-decoration: underline;
     color: #010101; }
-  .controller-issues .issue .attributes tr {
+  .controller-issues .issue .issue-wrapper .attributes tr {
     border-bottom: 1px #ddd solid; }
-  .controller-issues .issue .attributes th {
+  .controller-issues .issue .issue-wrapper .attributes th {
     width: 20%; }
-  .controller-issues .issue .attributes td {
+  .controller-issues .issue .issue-wrapper .attributes td {
     width: 30%; }
-  .controller-issues .issue .attributes td.progress {
+  .controller-issues .issue .issue-wrapper .attributes td.progress {
     margin: 1px 0 1px 0px;
     position: relative; }
-    .controller-issues .issue .attributes td.progress table.progress {
+    .controller-issues .issue .issue-wrapper .attributes td.progress table.progress {
       margin: 0;
       min-width: 70%;
       max-width: 70%; }
-      .controller-issues .issue .attributes td.progress table.progress .todo {
+      .controller-issues .issue .issue-wrapper .attributes td.progress table.progress .todo {
         height: 17px;
         border-radius: 2px 0 0 2px; }
-    .controller-issues .issue .attributes td.progress .percent {
+    .controller-issues .issue .issue-wrapper .attributes td.progress .percent {
       width: 30%;
       background-color: #179e7f;
       display: inline-block;
@@ -1439,7 +1441,7 @@ body #content p.author {
   margin-top: 0; }
 
 .controller-issues #content > h2 {
-  margin-bottom: 12px; }
+  margin-bottom: 1.2rem; }
 
 .controller-issues #content div.attachments > p {
   padding: 10px;
@@ -1642,25 +1644,71 @@ body {
 /**
  * Projects Index
  */
-ul.projects.root {
+#projects-index ul.projects.root {
   -webkit-column-count: 2;
   -moz-column-count: 2;
   -ms-column-count: 2;
   -o-column-count: 2;
-  column-count: 2; }
-ul.projects li.root:nth-child(odd) {
+  column-count: 2;
+  -webkit-column-gap: 1.2rem;
+  -moz-column-gap: 1.2rem;
+  -ms-column-gap: 1.2rem;
+  -o-column-gap: 1.2rem;
+  column-gap: 1.2rem; }
+  #projects-index ul.projects.root li {
+    position: relative;
+    display: block; }
+    #projects-index ul.projects.root li.root {
+      margin: 0 0 1.2rem; }
+    #projects-index ul.projects.root li div.root {
+      position: relative; }
+    #projects-index ul.projects.root li a {
+      padding-left: 0;
+      display: block;
+      background-image: none; }
+      #projects-index ul.projects.root li a.project:before {
+        font-size: 11px;
+        position: absolute;
+        right: 0;
+        content: "\f006";
+        font-family: Fontawesome;
+        padding-right: 5px;
+        opacity: 0.5; }
+      #projects-index ul.projects.root li a.project.my-project {
+        background-image: none;
+        position: relative; }
+        #projects-index ul.projects.root li a.project.my-project:before {
+          content: "\f005";
+          right: 0;
+          font-family: Fontawesome;
+          padding-right: 5px;
+          opacity: 0.5; }
+  #projects-index ul.projects.root .description {
+    font-size: 0.8em; }
+  #projects-index ul.projects.root .child .description {
+    font-size: 1em; }
+#projects-index ul.projects li.root:nth-child(odd) {
   background-color: #fdfdfd; }
-ul.projects li.root {
+#projects-index ul.projects li.root {
   padding: 5%;
   background-color: #FEFEFE;
-  margin: 0 0 10px;
+  margin: 0 0 1.2rem;
   display: inline-block;
   width: 100%;
   vertical-align: top;
   border-bottom: 1px #fafafa solid;
   border-left: 1px solid #f8f8f8; }
-
-#projects-index > ul.projects > li > div > a {
+  #projects-index ul.projects li.root p {
+    margin-bottom: 0; }
+  #projects-index ul.projects li.root ol {
+    padding: 0; }
+    #projects-index ul.projects li.root ol li {
+      padding: 0; }
+#projects-index > ul.projects > li a {
+  font-size: 1.2em; }
+#projects-index > ul.projects > li > .root > a {
+  border-bottom: 1px #efefef solid;
+  padding-bottom: 10px;
   font-size: 1.6em;
   font-weight: 600;
   text-transform: uppercase; }
@@ -1673,12 +1721,8 @@ ul.projects li.root {
   font-weight: 600;
   text-transform: uppercase;
   font-size: 1.2em; }
-#projects-index > ul.projects > .root > ul.projects .description p {
-  font-size: 0.8em; }
 #projects-index li.root li.child > .child > a {
   display: block; }
-#projects-index li.root li.child > .child > a.my-project {
-  padding-left: 20px; }
 
 /**
  * Projects Controller
@@ -1847,7 +1891,6 @@ table.list {
   background-color: #ddd;
   margin-top: 2px;
   margin-right: 5px;
-  border-radius: 100%;
   background-color: #000;
   width: 16px;
   height: 16px;
@@ -1884,7 +1927,7 @@ table.list {
   content: "\f0da"; }
 .issues tr.issue.assigned-to-me > td:first-child:before {
   content: "\f101";
-  background-color: #55ff55; }
+  background-color: #A3DCA3; }
 .issues tr.issue.overdue > td:first-child:before {
   content: "\f017";
   background-color: #ff0000; }
@@ -1922,7 +1965,7 @@ table.list {
   content: "\f071";
   background-color: #FF0000; }
 .issues tbody tr:hover {
-  background-color: #ecf0f1 !important;
+  background-color: #fafaf5 !important;
   color: #7f8c8d !important; }
   .issues tbody tr:hover a {
     color: #7f8c8d !important; }
@@ -2304,7 +2347,7 @@ body #content .nodata {
       width: 20%; }
     #content .issue .attributes td {
       width: 30%; } }
-@media (min-width: 1600px) {
+@media (min-width: 1439px) {
   body, html {
     background-color: #f5f5f5;
     padding: 0; }
