--- a/workspace/scss/_settings.scss
+++ b/workspace/scss/_settings.scss
@@ -12,6 +12,12 @@
  */
 $typeset-primary: "PT Sans","Lucida Grande",arial,sans-serif;
 $typeset-secondary: "Source Code Pro", Helvetica,Arial,"Lucida Grande",verdana,sans-serif;
+$font-size-primary: 13px;
+$font-size-table-list: 12px;
+$font-size-h1: 1.5rem;
+$font-size-h2: 1.5rem;
+$font-size-h3: inherit;
+$font-size-h4: inherit;
 
 /**
  * Margins
