--- a/workspace/scss/_grid.scss
+++ b/workspace/scss/_grid.scss
@@ -8,8 +8,12 @@
  */
 
 .box {
-	border: 1px solid;
-	border-color: #e5e6e9 #dfe0e4 #d0d1d5;	
+	border: 0 solid;
+	border-color: #e5e6e9 #dfe0e4 #d0d1d5;
+	padding: 0;
+	fieldset {
+		margin-bottom: $span-margin;
+	}
 }
 
 #main {
